Correct the mod to be purely client-side

--- a/src/main/resources/assets/supermobtracker/lang/en_us.lang
+++ b/src/main/resources/assets/supermobtracker/lang/en_us.lang
@@ -4,7 +4,7 @@ key.supermobtracker.open=Open Mob Tracker
 key.categories.supermobtracker=Super Mob Tracker
 
 # Config descriptions
-config.supermobtracker.server.enableTracking.desc=Enable server-side tracking of mobs.
+config.supermobtracker.client.enableTracking.desc=Enable tracking of mobs (requires Minecraft restart).
 config.supermobtracker.client.detectionRange.desc=Range in blocks to detect tracked mobs for glowing effect.
 config.supermobtracker.client.i18nNames.desc=Use localized names in the tracker GUI.
 config.supermobtracker.client.spawnCheckRetries.desc=Maximum retries for spawn condition checks. Higher values handle random spawn conditions better but increase analysis time.
@@ -18,7 +18,7 @@ config.supermobtracker.client.hudLineSpacing.desc=Spacing between lines in the t
 config.supermobtracker.client.hudEnabled.desc=Whether to show the tracking overlay on screen.
 
 # Config names (displayed in config GUI)
-config.supermobtracker.server.enableTracking=Enable Tracking
+config.supermobtracker.client.enableTracking=Enable Tracking
 config.supermobtracker.client.detectionRange=Detection Range
 config.supermobtracker.client.i18nNames=Localized Names
 config.supermobtracker.client.spawnCheckRetries=Spawn Check Retries
@@ -71,7 +71,8 @@ gui.mobtracker.weather.unknown=Unknown
 gui.mobtracker.weather.any=Any
 
 gui.mobtracker.dimension=Dimension: %s
-gui.mobtracker.dimension.unknown.tooltip=Could not determine dimension: the entity's native biome has not been found so far in scans. May appear later, once scans finish.
+gui.mobtracker.dimension.unknown.tooltip.scanning=Could not determine dimension: the entity's native biome has not been found so far in scans. May appear later, once scans finish.
+gui.mobtracker.dimension.unknown.tooltip.complete=Could not determine dimension: the entity's native biome was not found in any dimension scans.
 
 # Vanilla Dimensions
 dimension.overworld=Overworld
@@ -99,7 +100,6 @@ gui.mobtracker.attribute.flying=Flying
 gui.mobtracker.attribute.tameable=Tameable
 
 # Hints
-gui.mobtracker.hint.dimension=May spawn in another dimension.
 gui.mobtracker.hint.light=May require a specific light level.
 gui.mobtracker.hint.ground=May require a specific ground block.
 gui.mobtracker.hint.biome=May require a specific biome.
