--- a/src/main/resources/assets/supermobtracker/lang/en_us.lang
+++ b/src/main/resources/assets/supermobtracker/lang/en_us.lang
@@ -70,6 +70,9 @@ gui.mobtracker.weather.thunder=Thunder
 gui.mobtracker.weather.unknown=Unknown
 gui.mobtracker.weather.any=Any
 
+gui.mobtracker.sky.outside=Location: Outside only
+gui.mobtracker.sky.underground=Location: Underground only
+
 gui.mobtracker.dimension=Dimension: %s
 gui.mobtracker.dimension.unknown.tooltip.scanning=Could not determine dimension: the entity's native biome has not been found so far in scans. May appear later, once scans finish.
 gui.mobtracker.dimension.unknown.tooltip.complete=Could not determine dimension: the entity's native biome was not found in any dimension scans.
@@ -105,6 +108,7 @@ gui.mobtracker.hint.ground=May require a specific ground block.
 gui.mobtracker.hint.biome=May require a specific biome.
 gui.mobtracker.hint.time=May require a specific time of day.
 gui.mobtracker.hint.weather=May require specific weather.
+gui.mobtracker.hint.sky=May require sky visibility (surface spawning).
 
 # HUD Position Selector
 gui.supermobtracker.hudPosition.top_left=Top Left
