--- a/src/main/resources/assets/supermobtracker/lang/zh_cn.lang
+++ b/src/main/resources/assets/supermobtracker/lang/zh_cn.lang
@@ -18,6 +18,8 @@ config.supermobtracker.client.hudLineSpacing.desc=追踪叠加层中文本的行
 config.supermobtracker.client.hudEnabled.desc=是否在屏幕上显示追踪叠加层。
 config.supermobtracker.client.mobWhitelist.desc=允许追踪的实体ID白名单列表（优先级高于黑名单）。
 config.supermobtracker.client.mobBlacklist.desc=禁止追踪的实体ID黑名单列表。
+config.supermobtracker.client.dropSimulationCount.desc=用于计算掉落率的模拟击杀次数。
+config.supermobtracker.client.unstableSimulationEntities.desc=在掉落物模拟过程中会破坏全局状态，因此应从模拟中排除的实体ID。它们的特征是，在模拟其掉落物后，所有实体的模拟性能都会严重下降。
 
 # Config names (displayed in config GUI)
 config.supermobtracker.client.enableTracking=启用追踪
@@ -34,6 +36,8 @@ config.supermobtracker.client.hudLineSpacing=HUD行间距
 config.supermobtracker.client.hudEnabled=启用HUD
 config.supermobtracker.client.mobWhitelist=生物白名单
 config.supermobtracker.client.mobBlacklist=生物黑名单
+config.supermobtracker.client.dropSimulationCount=掉落物模拟次数
+config.supermobtracker.client.unstableSimulationEntities=不稳定的模拟实体
 
 # GUI Labels
 gui.supermobtracker.i18nIDs.on=ID显示：本地化
@@ -46,16 +50,34 @@ gui.mobtracker.cannotSpawnNaturally=该实体不会自然生成。
 gui.mobtracker.cannotSpawnNaturallyHint=可能只能通过刷怪箱、命令或者特殊游戏机制生成（例如Boss召唤）。
 gui.mobtracker.analysisCrashed=生成分析失败。
 gui.mobtracker.analysisCrashedHint=分析该实体的生成条件时发生错误。
-gui.mobtracker.noSpawnConditions=无法确定生成条件；可能尚未处理相关条件或生成概率极低。
+gui.mobtracker.noSpawnConditions=无法确定生成条件。这可能是因为存在未处理的生成要求，或生成检查中的随机性。尝试点击重试按钮。
+gui.mobtracker.retryButton=[重试]
 
+# Entity Info
 gui.mobtracker.entityName=名称：%s
 gui.mobtracker.entityId=ID：%s
 gui.mobtracker.entitySize=尺寸：%s x %s x %s
 gui.mobtracker.attributes=性质：%s
+gui.mobtracker.dropsButton=[查看掉落物]
 gui.mobtracker.jeiButton=[在JEI中查看]
 gui.mobtracker.blacklisted=该实体已列入黑名单
 gui.mobtracker.whitelisted=该实体未列入白名单
 
+# Drops Window
+gui.mobtracker.drops.title=掉落物：%s
+gui.mobtracker.drops.noSimulation=无可用模拟数据
+gui.mobtracker.drops.simulating=正在模拟击杀……（%d/%d）
+gui.mobtracker.drops.noDrops=未发现掉落物。可能没有任何掉落，或需要特殊初始化条件。
+gui.mobtracker.drops.simulationCount=基于%d次模拟击杀
+gui.mobtracker.drops.rateTooltip=平均每次击杀获得%s个物品
+gui.mobtracker.drops.entityNotLiving=实体不是生物实体
+gui.mobtracker.drops.entityConstructionFailed=实体构建失败
+gui.mobtracker.drops.unstableSimulation=该实体会破坏全局状态，不应进行模拟
+gui.mobtracker.drops.simulationFailed=模拟意外失败
+gui.mobtracker.drops.simulationCountTooltipDisclaimer=由于掉落物的随机性，模拟结果可能与实际游戏中的概率略有出入，或在模拟极其稀有掉落物时存在数据不全的情况。
+gui.mobtracker.drops.serverSideOnly=多人游戏：掉落物模拟功能仅限单人游戏使用
+
+# Spawn Conditions
 gui.mobtracker.spawnConditions=生成条件：
 gui.mobtracker.lightLevels=亮度：%s
 gui.mobtracker.yPos=Y轴坐标：%s
@@ -102,12 +124,14 @@ dimension.overworld=主世界
 dimension.the_nether=下界
 dimension.the_end=末地
 
+# Biomes
 gui.mobtracker.biomes=生物群系：%s
 gui.mobtracker.biomes.none=生物群系：无
 gui.mobtracker.biomes.unknown=生物群系：未知
 gui.mobtracker.biomes.any=生物群系：任意
 gui.mobtracker.biomesCopied=%s的生物群系已复制到剪贴板。
 
+# Misc
 gui.mobtracker.hintsHeader=备注：
 gui.mobtracker.any=任意
 gui.mobtracker.unknown=未知
